--- a/src/fxrialab/controls/charts/CoordinateAxisSkin.mxml
+++ b/src/fxrialab/controls/charts/CoordinateAxisSkin.mxml
@@ -15,20 +15,16 @@
 			private var sumValue:int = 0;
 			private var data:Object;
 			private var numberLineLandMark:Number = 10;
-			private var marginTop:Number = 30;
-			private var marginRight:Number = 10;
-			private var marginBottom:Number = 10;
-			private var marginLeft:Number = 10;
 
 			override protected function updateDisplayList(w:Number, h:Number):void {
 				super.updateDisplayList(w, h);
-
+				
+				trace(hostComponent.maxSum);
 				//get height of horizontal axis
-				//trace(hostComponent.dataProvider);
-				for(var i:uint = 0; i < hostComponent.dataProvider.length; i++) {
+				/*for(var i:uint = 0; i < hostComponent.dataProvider.length; i++) {
 					data = hostComponent.dataProvider.getItemAt(i);
 					sumValue += data[hostComponent.valueField];
-				} 
+				} */
 				//set text format for label field
 				var horizontalFormat:TextFormat = new TextFormat();
 				horizontalFormat.size = getStyle('size');
@@ -47,67 +43,73 @@
 				
 				var titleLabel:TextField = new TextField();
 				titleLabel.text = String(hostComponent.title);
-				titleLabel.x = 0;
-				titleLabel.y = 0;
-				titleLabel.width = w;
 				
 				titleLabel.setTextFormat(titleFormat);
 				displayLabel.addChild(titleLabel);
 
-				if(hostComponent.orientation == "horizontal"){
+				if (hostComponent.orientation == "horizontal") {
+					//position for title
+					titleLabel.x = 0;
+					titleLabel.y = h - hostComponent.maxSum - 40;
+					titleLabel.width = w;
 					//draw horizontal axis				
 					graphics.clear();
 					graphics.lineStyle(2, 0xDADADA);
-					graphics.moveTo(marginLeft, h - marginBottom);
-					graphics.lineTo(marginLeft, h - (sumValue + marginBottom));
+					graphics.moveTo(hostComponent.marginLeft, h - hostComponent.marginBottom);
+					graphics.lineTo(hostComponent.marginLeft, h - (hostComponent.maxSum + hostComponent.marginBottom));
 					//draw vertical axis
-					graphics.moveTo(marginLeft-2, h - marginBottom);
-					graphics.lineTo(w - marginRight + 2, h - marginBottom);
+					graphics.moveTo(hostComponent.marginLeft-2, h - hostComponent.marginBottom);
+					graphics.lineTo(w - hostComponent.marginRight + 2, h - hostComponent.marginBottom);
 					//draw percent axis
-					graphics.moveTo(w - marginRight, h - marginBottom);
-					graphics.lineTo(w - marginRight, h - (sumValue + marginBottom));
+					graphics.moveTo(w - hostComponent.marginRight, h - hostComponent.marginBottom);
+					graphics.lineTo(w - hostComponent.marginRight, h - (hostComponent.maxSum + hostComponent.marginBottom));
 					
 					//draw landmark gap for coordinate axis
 					for (var j:uint = 1; j <= numberLineLandMark; j++) {
-						graphics.moveTo(marginLeft-2, h - marginBottom - (sumValue/numberLineLandMark * j));
-						graphics.lineTo(w - marginRight + 2, h - marginBottom - (sumValue/numberLineLandMark * j));
+						graphics.moveTo(hostComponent.marginLeft-2, h - hostComponent.marginBottom - (hostComponent.maxSum/numberLineLandMark * j));
+						graphics.lineTo(w - hostComponent.marginRight + 2, h - hostComponent.marginBottom - (hostComponent.maxSum/numberLineLandMark * j));
 					}
 
 					//draw label left value and right percent
 					for (var k:int = 0; k <= numberLineLandMark; k++) {
 						var leftValue:TextField = new TextField();
-						leftValue.text = String(Math.ceil(sumValue/numberLineLandMark * k));
+						leftValue.text = String(Math.ceil(hostComponent.maxSum/numberLineLandMark * k));
 						leftValue.x = - 7;
-						leftValue.y = h - (sumValue/numberLineLandMark * k) - (marginBottom+5);
+						leftValue.y = h - (hostComponent.maxSum/numberLineLandMark * k) - (hostComponent.marginBottom+5);
 						leftValue.width = 15;
 						leftValue.setTextFormat(horizontalFormat);
 						displayLabel.addChild(leftValue);
 						
 						var rightPercent:TextField = new TextField();
 						rightPercent.text = String(Math.ceil(100 / numberLineLandMark) * k) + "%";
-						rightPercent.x = w - marginRight + 3;
-						rightPercent.y = h - (sumValue/numberLineLandMark * k) - (marginBottom+5);
+						rightPercent.x = w - hostComponent.marginRight + 3;
+						rightPercent.y = h - (hostComponent.maxSum/numberLineLandMark * k) - (hostComponent.marginBottom+5);
 						rightPercent.wordWrap = true;
 						
 						rightPercent.setTextFormat(verticalFormat);
 						displayLabel.addChild(rightPercent);
 					}
-				}else{
+				}else {
+					//position for title
+					titleLabel.x = 0;
+					titleLabel.y = 0;
+					titleLabel.width = hostComponent.maxSum;
+					//draw
 					graphics.clear();
 					graphics.lineStyle(2, 0xDADADA);
 					//draw vertical axis
-					graphics.moveTo(1 + marginLeft, marginTop);
-					graphics.lineTo(1 + marginLeft + sumValue, marginTop);
+					graphics.moveTo(1 + hostComponent.marginLeft, hostComponent.marginTop);
+					graphics.lineTo(1 + hostComponent.marginLeft + hostComponent.maxSum, hostComponent.marginTop);
 					//draw horizontal axis
-					graphics.moveTo(1 + marginLeft, marginTop);
-					graphics.lineTo(1 + marginLeft, h - marginBottom + 2);
+					graphics.moveTo(1 + hostComponent.marginLeft, hostComponent.marginTop);
+					graphics.lineTo(1 + hostComponent.marginLeft, h - hostComponent.marginBottom + 2);
 					//draw value axis
-					graphics.moveTo(1 + marginLeft, h - marginBottom);
-					graphics.lineTo(1 + marginLeft + sumValue, h - marginBottom);
+					graphics.moveTo(1 + hostComponent.marginLeft, h - hostComponent.marginBottom);
+					graphics.lineTo(1 + hostComponent.marginLeft + hostComponent.maxSum, h - hostComponent.marginBottom);
 					//draw landmark gap for coordinate axis
 					for (j= 1; j <= numberLineLandMark; j++) {
-						graphics.moveTo(1 + marginLeft + (sumValue/numberLineLandMark * j), marginTop);
-						graphics.lineTo(1 + marginLeft + (sumValue/numberLineLandMark * j), h - marginBottom + 2);
+						graphics.moveTo(1 + hostComponent.marginLeft + (hostComponent.maxSum/numberLineLandMark * j), hostComponent.marginTop);
+						graphics.lineTo(1 + hostComponent.marginLeft + (hostComponent.maxSum/numberLineLandMark * j), h - hostComponent.marginBottom + 2);
 					}
 					
 					//draw label left value and right percent
@@ -121,9 +123,9 @@
 						displayLabel.addChild(topPercent); */
 						
 						var bottomValue:TextField  = new TextField();
-						bottomValue.text = String(Math.ceil(sumValue/numberLineLandMark * k));
-						bottomValue.x = marginLeft + (sumValue/numberLineLandMark * k) - 3;
-						bottomValue.y = h - marginBottom + 2;
+						bottomValue.text = String(Math.ceil(hostComponent.maxSum/numberLineLandMark * k));
+						bottomValue.x = hostComponent.marginLeft + (hostComponent.maxSum/numberLineLandMark * k) - 3;
+						bottomValue.y = h - hostComponent.marginBottom + 2;
 						
 						bottomValue.setTextFormat(verticalFormat);
 						displayLabel.addChild(bottomValue);
