--- a/fxchartsLibrary/src/fxrialab/controls/charts/CoordinateAxisSkin.mxml
+++ b/fxchartsLibrary/src/fxrialab/controls/charts/CoordinateAxisSkin.mxml
@@ -14,31 +14,17 @@
 				
 			private var maxValue:Number;
 			private var minValue:Number;
-			private var numberLandMarkBelow:int;
-			private var numberLineLandMark:Number = 10;
-			
-			private function setPreciscion(number:Number, preciscion:int):Number{
-				preciscion = Math.pow(10, preciscion);
-				return (Math.round(number * preciscion)/preciscion);
-			}
+			private var numberLandMarkBelow:Number;
+			private var numberLineLandMark:Number;
 
 			override protected function updateDisplayList(w:Number, h:Number):void {
 				super.updateDisplayList(w, h);
 				
-				maxValue = hostComponent.maxValue + 30;
-				minValue = -hostComponent.minValue + 30;
-				/*  trace('minvalue', maxValue/numberLineLandMark);
-				var getNumberLandMarkOnBelow:Number = ((-hostComponent.minValue + 30)/(maxValue/numberLineLandMark));
-				numberLandMarkBelow = int(getNumberLandMarkOnBelow) + 1;
-				minValue = (maxValue/numberLineLandMark) * (int(getNumberLandMarkOnBelow) + 1);
-				trace(numberLandMarkBelow); */ 
-
-				//trace(hostComponent.minValue);
-				//get height of horizontal axis
-				/*for(var i:uint = 0; i < hostComponent.dataProvider.length; i++) {
-					data = hostComponent.dataProvider.getItemAt(i);
-					sumValue += data[hostComponent.valueField];
-				} */
+				maxValue = hostComponent.maxValue;
+				minValue = hostComponent.minValue;
+				numberLineLandMark = hostComponent.numberLineLandMarkDefault;
+				numberLandMarkBelow = hostComponent.numberLineLandMarkForNegativeAxis;
+				
 				//set text format for label field
 				var horizontalFormat:TextFormat = new TextFormat();
 				horizontalFormat.size = getStyle('size');
@@ -96,28 +82,32 @@
 							graphics.lineTo(w - hostComponent.marginRight + 2, h - hostComponent.marginBottom - ((maxValue)/numberLineLandMark * j) - minValue);
 						}
 						//draw landmark gap for negative below section
-						
-						/* for (j = 1; j <= numberLandMarkBelow; j++) {
-							graphics.moveTo(hostComponent.marginLeft-2, h - hostComponent.marginBottom + (-hostComponent.minValue/getNumberLandMarkOnBelow * j) - minValue);
-							graphics.lineTo(w - hostComponent.marginRight + 2, h - hostComponent.marginBottom + (-hostComponent.minValue/getNumberLandMarkOnBelow * j) - minValue);
-						}  */
+						 for (j = 1; j <= numberLandMarkBelow; j++) {
+							graphics.moveTo(hostComponent.marginLeft-2, h - hostComponent.marginBottom + (minValue/numberLandMarkBelow * j) - minValue);
+							graphics.lineTo(w - hostComponent.marginRight + 2, h - hostComponent.marginBottom + (minValue/numberLandMarkBelow * j) - minValue);
+						}  
 						//============================================
 						//draw label left value and right percent
 						//============================================
 						for (var k:int = 0; k <= numberLineLandMark; k++) {
 							//Draw value label of horizontal axis with positive value
-							var leftAboveValue:TextField = new TextField();
-							leftAboveValue.text = String(Math.ceil(maxValue/numberLineLandMark * k));
-							leftAboveValue.x = - 7;
-							leftAboveValue.y = h - (maxValue/numberLineLandMark * k) - minValue - hostComponent.marginBottom - 5;
-							leftAboveValue.width = 15;
-							leftAboveValue.setTextFormat(horizontalFormat);
-							displayLabel.addChild(leftAboveValue);
+							var positiveAboveValue:TextField = new TextField();
+							positiveAboveValue.text = String(Math.ceil(maxValue/numberLineLandMark * k));
+							positiveAboveValue.x = - 7;
+							positiveAboveValue.y = h - (maxValue/numberLineLandMark * k) - minValue - hostComponent.marginBottom - 5;
+							positiveAboveValue.width = 15;
+							positiveAboveValue.setTextFormat(horizontalFormat);
+							displayLabel.addChild(positiveAboveValue);
 						}
 						for (k= 1; k <= numberLandMarkBelow; k++) {
 							//Draw value label of horizontal axis with negative value
-							var leftBelowValue:TextField = new TextField();
-							//leftBelowValue.text = String(
+							var negativeBelowValue:TextField = new TextField();
+							negativeBelowValue.text = "-" + String(Math.ceil(minValue/numberLandMarkBelow * k));
+							negativeBelowValue.x = -7;
+							negativeBelowValue.y = h - hostComponent.marginBottom + (minValue/numberLandMarkBelow * k) - minValue - 5;
+							negativeBelowValue.width = 15;
+							negativeBelowValue.setTextFormat(horizontalFormat);
+							displayLabel.addChild(negativeBelowValue);
 						}
 					}else {
 						//position for title
@@ -170,45 +160,115 @@
 					}
 					
 				}else {
-					//position for title
-					titleLabel.x = 0;
-					titleLabel.y = 0;
-					titleLabel.width = hostComponent.maxValue;
-					//draw
-					graphics.clear();
-					graphics.lineStyle(2, 0xDADADA);
-					//draw vertical axis
-					graphics.moveTo(1 + hostComponent.marginLeft, hostComponent.marginTop);
-					graphics.lineTo(1 + hostComponent.marginLeft + hostComponent.maxValue, hostComponent.marginTop);
-					//draw horizontal axis
-					graphics.moveTo(1 + hostComponent.marginLeft, hostComponent.marginTop);
-					graphics.lineTo(1 + hostComponent.marginLeft, h - hostComponent.marginBottom + 2);
-					//draw value axis
-					graphics.moveTo(1 + hostComponent.marginLeft, h - hostComponent.marginBottom);
-					graphics.lineTo(1 + hostComponent.marginLeft + hostComponent.maxValue, h - hostComponent.marginBottom);
-					//draw landmark gap for coordinate axis
-					for (j= 1; j <= numberLineLandMark; j++) {
-						graphics.moveTo(1 + hostComponent.marginLeft + (hostComponent.maxValue/numberLineLandMark * j), hostComponent.marginTop);
-						graphics.lineTo(1 + hostComponent.marginLeft + (hostComponent.maxValue/numberLineLandMark * j), h - hostComponent.marginBottom + 2);
-					}
-					
-					//draw label left value and right percent
-					for (k = 0; k <= numberLineLandMark; k++) {
-						/* var topPercent:TextField = new TextField();
-						topPercent.text = String(Math.ceil(100 / numberLineLandMark) * k) + "%";
-						topPercent.x = marginLeft + (sumValue/numberLineLandMark * k) - 3;
-						topPercent.y = marginTop - 10;
+					if(hostComponent.minValue) {
+						//position for title
+						titleLabel.x = 0;
+						titleLabel.y = 0;
+						titleLabel.width = hostComponent.maxValue;
+						//============================================
+						//draw coordinate for chart
+						//============================================
+						graphics.clear();
+						graphics.lineStyle(2, 0xDADADA);
+						//draw positive section	
+						//draw right vertical axis
+						graphics.moveTo(1 + hostComponent.marginLeft + minValue, hostComponent.marginTop);
+						graphics.lineTo(1 + hostComponent.marginLeft + maxValue + minValue, hostComponent.marginTop);
+						//draw horizontal axis
+						graphics.moveTo(1 + hostComponent.marginLeft + minValue, hostComponent.marginTop);
+						graphics.lineTo(1 + hostComponent.marginLeft + minValue, h - hostComponent.marginBottom + 2);
+						//draw right value axis
+						graphics.moveTo(1 + hostComponent.marginLeft + minValue, h - hostComponent.marginBottom);
+						graphics.lineTo(1 + hostComponent.marginLeft + maxValue + minValue, h - hostComponent.marginBottom);
+						//draw negative section
+						//draw left vertical axis
+						graphics.moveTo(1 + hostComponent.marginLeft + minValue, hostComponent.marginTop);
+						graphics.lineTo(1 + hostComponent.marginLeft, hostComponent.marginTop);
+						//draw left value axis
+						graphics.moveTo(1 + hostComponent.marginLeft + minValue, h - hostComponent.marginBottom);
+						graphics.lineTo(1 + hostComponent.marginLeft, h - hostComponent.marginBottom);
+						//draw landmark gap for positive right section
+						for (j= 1; j <= numberLineLandMark; j++) {
+							graphics.moveTo(1 + hostComponent.marginLeft + (maxValue/numberLineLandMark * j) + minValue, hostComponent.marginTop);
+							graphics.lineTo(1 + hostComponent.marginLeft + (maxValue/numberLineLandMark * j) + minValue, h - hostComponent.marginBottom + 2);
+						}
+						//draw landmark gap for negative left section
+						for (j = 1; j <= numberLandMarkBelow; j++) {
+							graphics.moveTo(1 + hostComponent.marginLeft - (minValue/numberLandMarkBelow * j) + minValue, hostComponent.marginTop);
+							graphics.lineTo(1 + hostComponent.marginLeft - (minValue/numberLandMarkBelow * j) + minValue, h - hostComponent.marginBottom + 2);
+						}
+						//============================================
+						//draw label left value and right percent
+						//============================================
+						for (k = 0; k <= numberLineLandMark; k++) {
+							/* var topPercent:TextField = new TextField();
+							topPercent.text = String(Math.ceil(100 / numberLineLandMark) * k) + "%";
+							topPercent.x = marginLeft + (sumValue/numberLineLandMark * k) - 3;
+							topPercent.y = marginTop - 10;
+							
+							topPercent.setTextFormat(verticalFormat);
+							displayLabel.addChild(topPercent); */
+							
+							var positiveRightValue:TextField = new TextField();
+							positiveRightValue.text = String(Math.ceil(maxValue/numberLineLandMark * k));
+							positiveRightValue.x = hostComponent.marginLeft + (maxValue/numberLineLandMark * k) - 3 + minValue;
+							positiveRightValue.y = h - hostComponent.marginBottom + 2;
+							
+							positiveRightValue.setTextFormat(verticalFormat);
+							displayLabel.addChild(positiveRightValue);
+						}
+						for (k = 0; k <= numberLandMarkBelow; k++) {
+							var negativeLeftValue:TextField = new TextField();
+							negativeLeftValue.text = String(Math.ceil(minValue/numberLandMarkBelow * k));
+							negativeLeftValue.x = hostComponent.marginLeft - (minValue/numberLandMarkBelow * k) - 3 + minValue;
+							negativeLeftValue.y = h - hostComponent.marginBottom + 2;
+							
+							negativeLeftValue.setTextFormat(verticalFormat);
+							displayLabel.addChild(negativeLeftValue);
+						}
+					}else {
+						//position for title
+						titleLabel.x = 0;
+						titleLabel.y = 0;
+						titleLabel.width = hostComponent.maxValue;
+						//draw
+						graphics.clear();
+						graphics.lineStyle(2, 0xDADADA);
+						//draw vertical axis
+						graphics.moveTo(1 + hostComponent.marginLeft, hostComponent.marginTop);
+						graphics.lineTo(1 + hostComponent.marginLeft + maxValue, hostComponent.marginTop);
+						//draw horizontal axis
+						graphics.moveTo(1 + hostComponent.marginLeft, hostComponent.marginTop);
+						graphics.lineTo(1 + hostComponent.marginLeft, h - hostComponent.marginBottom + 2);
+						//draw value axis
+						graphics.moveTo(1 + hostComponent.marginLeft, h - hostComponent.marginBottom);
+						graphics.lineTo(1 + hostComponent.marginLeft + maxValue, h - hostComponent.marginBottom);
+						//draw landmark gap for coordinate axis
+						for (j= 1; j <= numberLineLandMark; j++) {
+							graphics.moveTo(1 + hostComponent.marginLeft + (maxValue/numberLineLandMark * j), hostComponent.marginTop);
+							graphics.lineTo(1 + hostComponent.marginLeft + (maxValue/numberLineLandMark * j), h - hostComponent.marginBottom + 2);
+						}
 						
-						topPercent.setTextFormat(verticalFormat);
-						displayLabel.addChild(topPercent); */
-						
-						var bottomValue:TextField  = new TextField();
-						bottomValue.text = String(Math.ceil(hostComponent.maxValue/numberLineLandMark * k));
-						bottomValue.x = hostComponent.marginLeft + (hostComponent.maxValue/numberLineLandMark * k) - 3;
-						bottomValue.y = h - hostComponent.marginBottom + 2;
-						
-						bottomValue.setTextFormat(verticalFormat);
-						displayLabel.addChild(bottomValue);
+						//============================================
+						//draw label left value and right percent
+						//============================================
+						for (k = 0; k <= numberLineLandMark; k++) {
+							/* var topPercent:TextField = new TextField();
+							topPercent.text = String(Math.ceil(100 / numberLineLandMark) * k) + "%";
+							topPercent.x = marginLeft + (sumValue/numberLineLandMark * k) - 3;
+							topPercent.y = marginTop - 10;
+							
+							topPercent.setTextFormat(verticalFormat);
+							displayLabel.addChild(topPercent); */
+							
+							var bottomValue:TextField = new TextField();
+							bottomValue.text = String(Math.ceil(maxValue/numberLineLandMark * k));
+							bottomValue.x = hostComponent.marginLeft + (maxValue/numberLineLandMark * k) - 3;
+							bottomValue.y = h - hostComponent.marginBottom + 2;
+							
+							bottomValue.setTextFormat(verticalFormat);
+							displayLabel.addChild(bottomValue);
+						}
 					}
 				}
 			}
