fix clear old chart when resize popup or browser

--- a/fxchartsLibrary/src/fxrialab/controls/charts/CoordinateAxisSkin.mxml
+++ b/fxchartsLibrary/src/fxrialab/controls/charts/CoordinateAxisSkin.mxml
@@ -59,6 +59,7 @@
 						//============================================
 						//draw positive section	
 						//draw up horizontal axis
+						graphics.clear();
 						graphics.lineStyle(2, 0xDADADA);
 						graphics.moveTo(hostComponent.marginLeft, h - hostComponent.marginBottom - minValue);
 						graphics.lineTo(hostComponent.marginLeft, h - hostComponent.marginBottom - minValue - maxValue);
