some changes for example Charts

--- a/exampleCharts/doughnut.mxml
+++ b/exampleCharts/doughnut.mxml
@@ -3,7 +3,7 @@
 			   xmlns:s="library://ns.adobe.com/flex/spark"
 			   xmlns:mx="library://ns.adobe.com/flex/mx"
 			   xmlns:charts="fxrialab.controls.charts.*"
-			   xmlns:legend="fxrialab.controls.charts.legend.*">
+			   xmlns:legend="fxrialab.controls.charts.legend.*" width="100%" height="100%">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -27,10 +27,12 @@
 		]]>
 	</fx:Script>
 	
-	<charts:FxChart x="50" width="400" height="500" dataProvider="{chartsData}"
-					 config="{config}" />
-	<legend:FxLegend x="50" y="350" dataProvider="{chartsData}"
-					 itemRenderer="fxrialab.controls.charts.legend.DefaultLegendRenderer"
-					 orientation="horizontalLayout" />
+	<s:VGroup horizontalCenter="0">
+		<charts:FxChart width="{this.width - 60}" height="300" dataProvider="{chartsData}"
+						config="{config}" />
+		<legend:FxLegend dataProvider="{chartsData}"
+						 itemRenderer="fxrialab.controls.charts.legend.DefaultLegendRenderer"
+						 orientation="horizontalLayout" />
+	</s:VGroup>
 	
 </s:Application>
