--- a/exampleCharts/pie.mxml
+++ b/exampleCharts/pie.mxml
@@ -3,7 +3,7 @@
 			   xmlns:s="library://ns.adobe.com/flex/spark"
 			   xmlns:mx="library://ns.adobe.com/flex/mx"
 			   xmlns:charts="fxrialab.controls.charts.*"
-			   xmlns:legend="fxrialab.controls.charts.legend.*">
+			   xmlns:legend="fxrialab.controls.charts.legend.*" width="100%" height="100%">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -16,10 +16,10 @@
 			public var chartsData:IList = new ArrayList([
 				{type:'pie', data:[
 					{label:'IT', value: 50, fill: '0x6600CC'},
-					{label:'Business', value: 46, fill: '0xff00CC'},
-					{label:'Doctor in the hospital ddsfdsfd', value: 64, fill: '0x00xzCC'},
+					{label:'Business', value: 46, fill: '0xAAFFCC'},
+					{label:'Doctor', value: 64, fill: '0x00xzCC'},
 					{label:'Teacher', value: 85, fill: '0xDA00CC'},
-					{label:'Engineeresa', value: 75, fill: '0xaa32CC'}
+					{label:'Engineer', value: 75, fill: '0xaa32CC'}
 				]} 
 			]);
 			[Bindable]
@@ -27,10 +27,12 @@
 		]]>
 	</fx:Script>
 	
-	<charts:FxChart x="50" width="400" height="500" dataProvider="{chartsData}"
-					 config="{config}" />
-	<legend:FxLegend x="50" y="350" dataProvider="{chartsData}"
-					 itemRenderer="fxrialab.controls.charts.legend.DefaultLegendRenderer"
-					 orientation="horizontalLayout" />
+	<s:VGroup horizontalCenter="0">
+		<charts:FxChart width="{this.width - 60}" height="{this.height - 100}" dataProvider="{chartsData}"
+						config="{config}" />
+		<legend:FxLegend dataProvider="{chartsData}"
+						 itemRenderer="fxrialab.controls.charts.legend.DefaultLegendRenderer"
+						 orientation="horizontalLayout" />
+	</s:VGroup>
 	
 </s:Application>
