--- a/exampleCharts/stackedBar.mxml
+++ b/exampleCharts/stackedBar.mxml
@@ -3,7 +3,7 @@
 			   xmlns:s="library://ns.adobe.com/flex/spark"
 			   xmlns:mx="library://ns.adobe.com/flex/mx"
 			   xmlns:charts="fxrialab.controls.charts.*"
-			   xmlns:legend="fxrialab.controls.charts.legend.*">
+			   xmlns:legend="fxrialab.controls.charts.legend.*" width="100%" height="100%">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -28,7 +28,7 @@
 					{label:'Teacher', value: 51},
 					{label:'Engineer', value: 24}
 				]} ,
-				{type:'horizontalBar', fill:'#EEAAFF', label: 'Title of bar3', data:[
+				{type:'horizontalBar', fill:'#AAFFCC', label: 'Title of bar3', data:[
 					{label:'IT', value: 37},
 					{label:'Business', value: 58},
 					{label:'Doctor', value: 48},
@@ -41,10 +41,12 @@
 		]]>
 	</fx:Script>
 	
-	<charts:FxChart x="50" width="200" height="300" dataProvider="{chartsData}"
-					 config="{config}" />
-	<legend:FxLegend x="50" y="350" dataProvider="{chartsData}"
-					 itemRenderer="fxrialab.controls.charts.legend.DefaultLegendRenderer"
-					 orientation="horizontalLayout" />
+	<s:VGroup horizontalCenter="0">
+		<charts:FxChart width="{this.width - 60}" height="{this.height - 100}" dataProvider="{chartsData}"
+						config="{config}" />
+		<legend:FxLegend dataProvider="{chartsData}"
+						 itemRenderer="fxrialab.controls.charts.legend.DefaultLegendRenderer"
+						 orientation="horizontalLayout" />
+	</s:VGroup>
 	
 </s:Application>
